# ufmg-basics

./: .gitignore
pds2-trash-recycling/: CMakeLists.txt  Makefile  README.md
pds2-trash-recycling/code/header/common/: FindResult.h  enums.h
pds2-trash-recycling/code/header/common/class/: Controller.h  DAO.h  MenuController.h  MenuItemSet.h
pds2-trash-recycling/code/header/common/interface/: IModel.h  IService.h
pds2-trash-recycling/code/header/module/login/: LoginController.h
pds2-trash-recycling/code/header/module/meeting-point/: MeetingPointController.h  MeetingPointDAO.h  MeetingPointModel.h  MeetingPointService.h
pds2-trash-recycling/code/header/module/reject-type/: RejectTypeController.h  RejectTypeDAO.h  RejectTypeModel.h  RejectTypeService.h
pds2-trash-recycling/code/header/module/scheduling/: SchedulingController.h  SchedulingDAO.h  SchedulingModel.h  SchedulingService.h
pds2-trash-recycling/code/header/module/user/: UserController.h  UserDAO.h  UserModel.h  UserService.h
pds2-trash-recycling/code/src/: main.cpp
pds2-trash-recycling/code/src/class/common/: Controller.cpp  DAO.cpp  MenuController.cpp  MenuItemSet.cpp
pds2-trash-recycling/code/src/class/module/login/: LoginController.cpp
pds2-trash-recycling/code/src/class/module/meeting-point/: MeetingPointController.cpp  MeetingPointDAO.cpp  MeetingPointModel.cpp  MeetingPointService.cpp
pds2-trash-recycling/planning/: trash-recycling-entidades.txt  trash-recycling-stories.txt  trash-recycling.txt
pds2-trash-recycling/storage/: meeting-point.txt  reject-type.txt  scheduling.txt  user.txt
(+86 files in other folders)
